--- a/src/components/GoogleReviews.css
+++ b/src/components/GoogleReviews.css
@@ -1,6 +1,6 @@
 .google-review-root {
   background: #fff;
-  padding: 15px 0;
+  padding: 20px 50px;
   h2 {
     text-align: center;
     margin-bottom: 15px;
