--- a/src/pages/ProductDetails.css
+++ b/src/pages/ProductDetails.css
@@ -203,14 +203,13 @@
 }
 
 .product-details-tag-style {
-  background-color: #ff4d4d;
-  color: white;
-  font-size: 0.6em;
-  padding: 2px 5px;
-  border-radius: 3px;
-  margin-left: 5px;
-  vertical-align: super;
-  /* ensures it stays as superscript */
+      background-color: #7d15a03b;
+    color: #7d15a0;
+    font-size: 0.6em;
+    padding: 2px 5px;
+    border-radius: 3px;
+    margin-left: 5px;
+    vertical-align: super;
 }
 
 
@@ -228,11 +227,11 @@
 }
 
 .product-details-discount-badge {
-  background-color: #ff4d4d;
-  color: white;
-  padding: 2px 6px;
-  border-radius: 4px;
-  font-size: 0.9rem;
+     background-color: #e7008940;
+    color: #e70089;
+    padding: 2px 6px;
+    border-radius: 4px;
+    font-size: 0.8rem;
 }
 .product-details-product-colors,
 .product-details-product-sizes {
@@ -323,4 +322,28 @@
 .no-product-card .btn-primary:hover {
   background-color: #e60000;
   transform: scale(1.05);
+}
+
+
+.savings-info {
+  margin-top: 6px;
+  background-color: #ebf5eb;
+  color: #259325;
+  padding: 6px 12px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 0.9rem;
+  max-width: 525px;
+  line-height: 1.2;
+  margin-bottom: 8px;
+}
+.shipping-info {
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: #444;
+  margin-top: 8px;
+  background: #eee;
+  padding: 5px 12px;
+  border-radius: 4px;
+  max-width: max-content;
 }
