--- a/src/components/PriceFilterSection.css
+++ b/src/components/PriceFilterSection.css
@@ -4,7 +4,7 @@
 }
 
 .price-filter-title {
-    font-size: 2rem;
+    font-size: 20px;
     font-weight: 600;
     margin-bottom: 24px;
     color: #222;
