--- a/src/components/ScrollableCategoryCarousel.css
+++ b/src/components/ScrollableCategoryCarousel.css
@@ -41,6 +41,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-weight: unset;
 }
 
 
@@ -56,7 +57,7 @@
 
 .carousel-price {
     margin: 0;
-    font-weight: bold;
+   font-weight: 500;
     font-size: 17px;
     color: #E70089;
     white-space: nowrap;
@@ -71,7 +72,7 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
     transition: background-color 0.3s ease;
 }
 
