--- a/src/pages/ProductDetails.css
+++ b/src/pages/ProductDetails.css
@@ -277,6 +277,10 @@
   color: white;
 }
 
+.product-details-size-badge-selected{
+   background-color: #333;
+  color: white;
+}
 .no-product-container {
   display: flex;
   justify-content: center;
