--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -163,3 +163,21 @@
   max-width: 100%;
   object-fit: contain; /* Optional: ensures image fits nicely */
 }
+
+
+.banner-image-wrapper {
+  width: 100%;
+  margin: 2px auto;
+}
+
+.banner-image-wrapper img {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+
+@media (max-width: 600px) {
+  .banner-image-wrapper img {
+    height: 200px;
+  }
+}
